# gitlab-runners-fleet

./: .gitignore  MAGIC.md  Makefile  NOTES.md  README.md  TODO.md  pyproject.toml  servers.tf  setup.cfg  yandex.tf
.github/workflows/: build.yml  container.yml  server.yml  test.yml
container/: Dockerfile  Makefile  README.md  backend.tf  compose.yml  entrypoint.sh
deploy/: Makefile  README.md  loop.sh  network.tf  scale.config  servers.tf  variables.tf  yandex.tf
deploy/cloud-config/: gateway  gateway.yml  runner.yml
instance/: Makefile  README.md  cloudinit.yml.j2  metrics.service  playbook.yml
makefiles/: README.md  docker.mk  environment.mk  pulumi.mk  pypi.mk  venv.mk
pulumi/: Pulumi.yaml  README.md  __main__.py  assign_runners.py  cloudinit.py  data.py  destroy.py  gitlab.py  instance.py  requirements.txt  scaling.py
scale/: Makefile  README.md  go.mod  go.sum  main.go  sample_config.json  scale.go
scale/app/: config.go  json.go  json_test.go  main.go  update.go
scale/cloud/: cleanup.go  fleet.go  fleet_state_test.go  json.go  json_test.go  main.go  metrics.go  status.go  terraform.go
scale/gitlab/: api.go  jobs.go  json.go  json_test.go  queries.go  runner.go
scale/gitlab/queries/: jobs_pending.gql  runner_assign.gql  runner_remove.gql  (+1 more)
scale/tests/: config_parser_test.go  fleet_tfstate.sample  fleet_tfstate_test.go  gitlab_api_test.go  gitlab_runners_test.go  state_test.go
src/fleet_manager/: __init__.py  cli.py  cloud.py  config.py  config_default.toml  gitlab.py  logging.py  provision.py  scaling.py  templating.py  timestamp.py  yandex.py
systemd/: README.md  environment.sample  gitlab-runners-fleet.service  gitlab-runners-fleet.timer
tests/: config_override.toml  test_config.py
(+16 files in other folders)
