[metadata]
name = gitlab-runners-fleet
url = https://github.com/sio/gitlab-runners-fleet
description = Auto scaling fleet of GitLab CI runners
long_description = file: README.md
long_description_content_type = text/markdown
keywords = pulumi, cloud, gitlab, ci, autoscaling, scaling
license = Apache-2.0
license_file = LICENSE
classifiers =
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License


[options]
include_package_data = True
packages = fleet_manager
package_dir =
    =src
install_requires =
    cirrus-run
    coolname
    Jinja2
    pulumi
    pulumi_yandex
    python-dateutil
    requests
    setuptools
    toml


[options.package_data]
* = *.md, *.toml


[options.entry_points]
console_scripts =
    fleet-manager = fleet_manager.cli:main
